--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -871,7 +871,7 @@ inactive_text_alpha .5
 #: between zero and one, with zero being fully faded).
 #
 
-hide_window_decorations yes
+hide_window_decorations titlebar-only
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
