added a bunch of tmux stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,44 @@
-
 # Enable true color support - taken from here:
 # https://web.archive.org/web/20220819134203/https://mbuffett.com/posts/setting-up-tmux-and-kitty-for-true-color-support/
 # use terminal-features instead of terminal-overrides because of newere version
 set -g default-terminal "screen-256color"
 set-option -sa terminal-features ",xterm-kitty:RGB"
 
+
+# The following come from/are inspired by:
+# https://dev.to/iggredible/useful-tmux-configuration-examples-k3g
+
+# Add binding to reload tmux.conf for fast, iterative development
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+unbind C-Space
+set -g prefix C-Space
+bind C-Space send-prefix #dbl control space for nested tmux
+
+# mouse mode (drag panes around)
+set -g mouse on
+
+
+# number everything from 1
+set -g base-index 1
+setw -g pane-base-index 1
+# renumber if window is closed
+
+set -g renumber-windows on
+
+# open new window in same path as current pane with better
+# defaults than %/"
+bind | split-window -hc "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
+
+# new window opens with current path
+bind c new-window -c "#{pane_current_path}"
+
+# go to last pane
+bind Space last-pane
+
+# TODO
+# vim-tmux-navigato
+# tpmg plugin manager
+# theme for tmux (example https://github.com/dracula/tmux)
+# open scratch notes bind-key h split-window -h "vim ~/scratch/notes.md"
