updated tmux conig to to work with nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,13 @@ bind c new-window -c "#{pane_current_path}"
 # go to last pane
 bind Space last-pane
 
+
+# set escape time so vim works correctly (suggested by :checkhealth)
+set-option -sg escape-time 10
+# check health again suggested the below
+set-option -g focus-events on
+
+
 # TODO
 # vim-tmux-navigato
 # tpmg plugin manager
