steam and merge fixes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,6 @@ bind c new-window -c "#{pane_current_path}"
 # go to last pane
 bind Space last-pane
 
-
 # set escape time so vim works correctly (suggested by :checkhealth)
 set-option -sg escape-time 10
 # check health again suggested the below
@@ -49,3 +48,4 @@ set-option -g focus-events on
 # tpmg plugin manager
 # theme for tmux (example https://github.com/dracula/tmux)
 # open scratch notes bind-key h split-window -h "vim ~/scratch/notes.md"
+# Review that youtube video Josean Martinez (How I use Tmux with Neovim...)
