added some ranger config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,4 +1,4 @@
-# ===================================================================
+tt# ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
 # (system-wide) or ~/.config/ranger/rc.conf (per user) and add your custom
@@ -280,7 +280,7 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers false
+set line_numbers relative
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
@@ -758,4 +758,23 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
+# Custom
+
+
+## edit rc.conf and source updates
+map X chain shell vim ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
+## Filter files as you type
+map f console scout -ftsea%space
+
+## allow files to drag
 map <C-d> shell drag %p
+
+
+default_linemode devicons2
+
+# show hidden files be default
+set show_hidden true
+
+# New tab in current folder
+map <c-n>  eval fm.tab_new('%d')
+
