added tpm and theme to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,17 @@ set-option -g focus-events on
 
 # TODO
 # vim-tmux-navigato
-# tpmg plugin manager
-# theme for tmux (example https://github.com/dracula/tmux)
 # open scratch notes bind-key h split-window -h "vim ~/scratch/notes.md"
 # Review that youtube video Josean Martinez (How I use Tmux with Neovim...)
+
+
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_middle_separator "|"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
