--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1941,6 +1941,7 @@ background_blur 4
 
 # map kitty_mod+enter new_window
 # map cmd+enter       new_window
+map cmd+enter no_op
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
