--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,9 +72,14 @@ set -g @catppuccin_window_current_text "#{b:pane_current_path}"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_middle_separator "|"
-#set -g @catppuccin_flavour 'mocha' 
-
+set -g @catppuccin_flavour 'mocha'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+
+
+if-shell 'test -n "$SSH_CLIENT"' {
+  set -g @catppuccin_flavour 'latte'
+}
+
 
 run '~/.tmux/plugins/tpm/tpm'
