--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@
 set -g default-terminal "screen-256color"
 set-option -sa terminal-features ",xterm-kitty:RGB"
 
-
 # The following come from/are inspired by:
 # https://dev.to/iggredible/useful-tmux-configuration-examples-k3g
 
@@ -73,6 +72,9 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_middle_separator "|"
 set -g @catppuccin_flavour 'mocha'
+
+set -g status-position top
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
