--- a/.config/borgmatic/config.yaml
+++ b/.config/borgmatic/config.yaml
@@ -11,12 +11,13 @@
 # List of source directories and files to back up. Globs and tildes
 # are expanded. Do not backslash spaces in path names.
 source_directories:
+    - /Users/vitalydruker/.config/
     - /Users/vitalydruker/projects/
     - /Users/vitalydruker/Pictures/
     - /Users/vitalydruker/Desktop/
     - /Users/vitalydruker/Documents/
-    - /Users/vitalydruker/wes/
     - /Users/vitalydruker/backups/
+    - /Users/vitalydruker/Notes/
     - /Users/vitalydruker/Application Settings/
 
 # A required list of local or remote repositories with paths and
@@ -27,10 +28,10 @@ source_directories:
 # SSH options like identity file or port. If systemd service is used,
 # then add local repository paths in the systemd service file to the
 # ReadWritePaths list. Prior to borgmatic 1.7.10, repositories was a
-# list of plain path strings.
+# list of plain path strings
 repositories:
-    - path: ssh://borg@drukernasnyc/volume1/borgbackup/macbookpro
-      label: backupserver
+    - path: ssh://borg@drukernasnyc/volume1/borgbackup/mba
+      label: remote
 #    - path: /mnt/backup
 #    label: local
 
@@ -215,7 +216,7 @@ exclude_if_present:
 
 # Command to use instead of "ssh". This can be used to specify ssh
 # options. Defaults to not set.
-# ssh_command: ssh -i /path/to/private/key
+ssh_command: ssh -i /Users/vitalydruker/.ssh/id_rsa
 
 # Base path used for various Borg directories. Defaults to $HOME,
 # ~$USER, or ~.
@@ -1031,10 +1032,10 @@ keep_yearly: 5
 # an account at https://healthchecks.io (or self-host Healthchecks) if
 # you'd like to use this service. See borgmatic monitoring
 # documentation for details.
-# healthchecks:
+healthchecks:
     # Healthchecks ping URL or UUID to notify when a backup
     # begins, ends, errors, or to send only logs.
-    # ping_url: https://hc-ping.com/your-uuid-here
+    ping_url: https://hc-ping.com/c54e51ca-b5e4-4e03-a1ff-821033d03074
 
     # Verify the TLS certificate of the ping URL host. Defaults to
     # true.
