--- a/.config/borgmatic/config.yaml
+++ b/.config/borgmatic/config.yaml
@@ -19,6 +19,7 @@ source_directories:
     - /Users/vitalydruker/backups/
     - /Users/vitalydruker/Notes/
     - /Users/vitalydruker/Application Settings/
+    - /Users/vitalydruker/.ssh/
 
 # A required list of local or remote repositories with paths and
 # optional labels (which can be used with the --repository flag to
