messing with the plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ set-option -g focus-events on
 bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
-    set @catppuccin_flavour 'latte' \;\
+    set @catppuccin_flavor 'latte' \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
     set display-time 0 \;\
@@ -60,7 +60,7 @@ bind -T root F12  \
 bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
-  set -u @catppuccin_flavour \;\
+  set -u @catppuccin_flavor \;\
   refresh-client -S \;\
   display "Tmux enabled"
 
@@ -71,7 +71,7 @@ set -g @catppuccin_window_current_text "#{b:pane_current_path}"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_middle_separator "|"
-set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavor 'mocha'
 
 set -g status-position top
 
@@ -80,7 +80,7 @@ set -g @plugin 'catppuccin/tmux'
 
 
 if-shell 'test -n "$SSH_CLIENT"' {
-  set -g @catppuccin_flavour 'latte'
+  set -g @catppuccin_flavor 'latte'
 }
 
 
