making some tmux moves

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,10 +17,9 @@ bind C-Space send-prefix #dbl control space for nested tmux
 # mouse mode (drag panes around)
 set -g mouse on
 
-
 # number everything from 1
 set -g base-index 1
-setw -g pane-base-index 1
+set -w -g pane-base-index 1
 # renumber if window is closed
 
 set -g renumber-windows on
@@ -41,6 +40,22 @@ set-option -sg escape-time 10
 # check health again suggested the below
 set-option -g focus-events on
 
+
+# Move between panes with Prefix h,j,k,l 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+#Resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+set -g pane-border-indicators arrows
 
 # TODO
 # vim-tmux-navigato
@@ -66,17 +81,26 @@ bind -T off F12 \
 
 
 
-set -g @catppuccin_window_current_fill "all"
-set -g @catppuccin_window_current_text "#{b:pane_current_path}"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_default_fill "none"
-set -g @catppuccin_window_middle_separator "|"
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_window_current_fill "all"
+# set -g @catppuccin_window_current_text "#{b:pane_current_path}"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_default_fill "none"
+# set -g @catppuccin_window_middle_separator "|"
+# set -g @catppuccin_flavour 'mocha'
 
 set -g status-position top
 
+set -g @plugin 'catppuccin/tmux#v2.1.1'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+
+
+# Make the status line more pleasant.
+set -g status-left ""
+set -g status-right '#[fg=#{@thm_crust},bg=#{@thm_teal}] session: #S '
+
+# Ensure that everything on the right side of the status line
+# is included.
+set -g status-right-length 100
 
 
 if-shell 'test -n "$SSH_CLIENT"' {
