--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,34 @@ set-option -sg escape-time 10
 # check health again suggested the below
 set-option -g focus-events on
 
+# Enable vi keys. 
+# Make copy mode more like vim
+set -w -g mode-keys vi
+bind Escape copy-mode
+bind-key -T copy-mode-vi v send -X begin-selection
+unbind p
+bind p paste-buffer
+
+
+# bind-key -T copy-mode-vi y send -X copy-selection
+# copy to mac clipboard
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+# Prefix Ctrl-v fills tmux buffer from system clipboard via pbpaste, then
+# pastes from buffer into tmux window
+bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+
+# Create popup for a window running zsh
+bind O display-popup -d "~/" \
+  -x C -y C -w 50% -h 50% \
+  -e "POPUP=true" -E "zsh"
+
+# Create popup for a window running ranger
+# open to pane current path!
+bind e display-popup -d "#{pane_current_path}" \
+  -x C -y C -w 50% -h 50% \
+  -e "POPUP=true" -E "ranger"
+
+
 
 # Move between panes with Prefix h,j,k,l 
 bind h select-pane -L
@@ -66,7 +94,6 @@ set -g pane-border-indicators arrows
 bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
-    set @catppuccin_flavour 'latte' \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
     set display-time 0 \;\
@@ -75,37 +102,46 @@ bind -T root F12  \
 bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
-  set -u @catppuccin_flavour \;\
   refresh-client -S \;\
   display "Tmux enabled"
 
 
+# all window style
+set -g window-status-style fg=cyan,bg=black
+# current window style
+set -g window-status-current-style fg=white,bold,bg=red
+# overall status bar style
+set -g status-style fg=white,bold,bg=black
 
+# Active pane normal, other shaded out
+set -g window-style fg=color240,bg=color235 
+set -g window-active-style fg=white,bg=black
+
+set -g status-left-length 40
+set -g status-left "#[fg=green]#S  #[fg=cyan]#P"
 # set -g @catppuccin_window_current_fill "all"
-# set -g @catppuccin_window_current_text "#{b:pane_current_path}"
 # set -g @catppuccin_window_default_text "#W"
 # set -g @catppuccin_window_default_fill "none"
 # set -g @catppuccin_window_middle_separator "|"
 # set -g @catppuccin_flavour 'mocha'
+# Status line right side - 31-Oct 13:37
+set -g status-right "#[fg=purple]#(~/.config/tmux/timewarrior.sh) | #[fg=cyan]%d %b %R"  # Update the status line every sixty seconds
+set -g status-interval 10
 
 set -g status-position top
 
-set -g @plugin 'catppuccin/tmux#v2.1.1'
+set -g status-justify centre
+
+# Update the status line every sixty seconds 
+set -g status-interval 60
+
+# Enable activity alerts  
+set -w -g monitor-activity on 
+set -w -g visual-activity on
+
+
+set -w -g pane-border-lines heavy
+
+
 set -g @plugin 'tmux-plugins/tpm'
-
-
-# Make the status line more pleasant.
-set -g status-left ""
-set -g status-right '#[fg=#{@thm_crust},bg=#{@thm_teal}] session: #S '
-
-# Ensure that everything on the right side of the status line
-# is included.
-set -g status-right-length 100
-
-
-if-shell 'test -n "$SSH_CLIENT"' {
-  set -g @catppuccin_flavour 'latte'
-}
-
-
 run '~/.tmux/plugins/tpm/tpm'
