--- a/.config/tmuxinator/home.yml
+++ b/.config/tmuxinator/home.yml
@@ -1,6 +1,6 @@
-# /Users/vitalydruker/.config/tmuxinator/tmuxconfig.yml
+# /Users/vitalydruker/.config/tmuxinator/home.yml
 
-name: tmuxconfig
+name: home
 root: ~/
 
 # Optional tmux socket
@@ -45,14 +45,18 @@ root: ~/
 # attach: false
 
 windows:
-  - editor:
+  - main:
+      layout: main-vertical
+      # Synchronize all panes of this window, can be enabled before or after the pane commands run.
+      # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
+      # synchronize: after
+      panes:
+        - nvim ~/Notes/personal/zzz/Scratch.md
+        -
+  - sysadmin: 
       layout: tiled
       panes:
-        - nvim ~/.tmux.conf
-        - nvim ~/Notes/personal/software/tmux.md
-        - cd ~/.config/tmux/
-  - support: 
-      layout: tiled
-      panes: 
-        - tmuxinator open tmuxconfig
+        - nvim ~/.install.sh
         - 
+  - processes: htop
+  - config: tmuxinator open home
