--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,8 +125,10 @@ set -g status-left "#[fg=green]#S  #[fg=cyan]#P"
 # set -g @catppuccin_window_middle_separator "|"
 # set -g @catppuccin_flavour 'mocha'
 # Status line right side - 31-Oct 13:37
-set -g status-right "#[fg=purple]#(~/.config/tmux/timewarrior.sh) | #[fg=cyan]%d %b %R"  # Update the status line every sixty seconds
-set -g status-interval 10
+set -g status-right "#[fg=purple]#(~/.config/tmux/timewarrior.sh) | #[fg=cyan]%d %b %R" 
+
+# Update the status line every five seconds
+set -g status-interval 5
 
 set -g status-position top
 
