--- a/.config/tmuxinator/home.yml
+++ b/.config/tmuxinator/home.yml
@@ -61,4 +61,9 @@ windows:
           - source ~/.virtualenvs/neovim/bin/activate; 
           - 
           - C-l
+  - config:
+      layout: tiled
+      panes: 
+      - tmuxinator open home
+      - 
 
