--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,6 +94,7 @@ set -g pane-border-indicators arrows
 bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
+    set @catppuccin_flavor 'latte' \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
     set display-time 0 \;\
@@ -102,6 +103,7 @@ bind -T root F12  \
 bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
+  set @catppuccin_flavor 'latte' \;\
   refresh-client -S \;\
   display "Tmux enabled"
 
@@ -119,20 +121,28 @@ set -g window-active-style fg=white,bg=black
 
 set -g status-left-length 40
 set -g status-left "#[fg=green]#S  #[fg=cyan]#P"
+set -g status-justify centre
 # set -g @catppuccin_window_current_fill "all"
 # set -g @catppuccin_window_default_text "#W"
 # set -g @catppuccin_window_default_fill "none"
 # set -g @catppuccin_window_middle_separator "|"
 # set -g @catppuccin_flavour 'mocha'
 # Status line right side - 31-Oct 13:37
-set -g status-right "#[fg=purple]#(~/.config/tmux/timewarrior.sh) | #[fg=cyan]%d %b %R" 
+# set -g status-right "#[fg=purple]#(~/.config/tmux/timewarrior.sh) | #[fg=cyan]%d %b %R" 
+
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_middle_separator "|"
+set -g @catppuccin_flavor 'mocha'
+
 
 # Update the status line every five seconds
 set -g status-interval 5
 
 set -g status-position top
 
-set -g status-justify centre
 
 # Update the status line every sixty seconds 
 set -g status-interval 60
@@ -141,9 +151,13 @@ set -g status-interval 60
 set -w -g monitor-activity on 
 set -w -g visual-activity on
 
+if-shell 'test -n "$SSH_CLIENT"' {
+  set -g @catppuccin_flavor 'latte'
+}
 
 set -w -g pane-border-lines heavy
 
 
 set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'catppuccin/tmux'
 run '~/.tmux/plugins/tpm/tpm'
