--- a/.tmux.conf
+++ b/.tmux.conf
@@ -138,8 +138,8 @@ set -g status-justify centre
 set -g status-interval 60
 
 # Enable activity alerts  
-set -w -g monitor-activity on 
-set -w -g visual-activity on
+# set -w -g monitor-activity on 
+# set -w -g visual-activity on
 
 
 set -w -g pane-border-lines heavy
