--- a/.config/tmuxinator/home.yml
+++ b/.config/tmuxinator/home.yml
@@ -3,46 +3,6 @@
 name: home
 root: ~/
 
-# Optional tmux socket
-# socket_name: foo
-
-# Note that the pre and post options have been deprecated and will be replaced by
-# project hooks.
-
-# Project hooks
-
-# Runs on project start, always
-# on_project_start: command
-
-# Run on project start, the first time
-# on_project_first_start: command
-
-# Run on project start, after the first time
-# on_project_restart: command
-
-# Run on project exit ( detaching from tmux session )
-# on_project_exit: command
-
-# Run on project stop
-# on_project_stop: command
-
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
-
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux. This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
-# Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: editor
-
-# Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
 
 windows:
   - main:
@@ -70,5 +30,18 @@ windows:
       panes:
         - cd ~/.qutebrowser/
         - cd ~/Documents/scripts/
+  - backups-config:
+      layout: tiled
+      panes:
+        - nvim ~/.config/borgmatic/config.yaml
+        - nvim ~/Documents/scripts/borgmatic.sh
+        - nvim ~/Notes/personal/systems/Computer Backup Strategy.md
+        - cd ~/Documents/scripts/
+  - tmux-config:
+      layout: tiled
+      panes:
+        - nvim ~/.tmux.conf
+        - nvim ~/Notes/personal/software/tmux.md
+        - cd ~/.config/tmux/
   - processes: htop
   - config: tmuxinator open home
