--- a/.config/tmuxinator/home.yml
+++ b/.config/tmuxinator/home.yml
@@ -3,47 +3,6 @@
 name: home
 root: ~/
 
-# Optional tmux socket
-# socket_name: foo
-
-# Note that the pre and post options have been deprecated and will be replaced by
-# project hooks.
-
-# Project hooks
-
-# Runs on project start, always
-on_project_start: source ~/.virtualenvs/neovim/bin/activate 
-
-# Run on project start, the first time
-# on_project_first_start: command
-
-# Run on project start, after the first time
-# on_project_restart: command
-
-# Run on project exit ( detaching from tmux session )
-# on_project_exit: command
-
-# Run on project stop
-# on_project_stop: command
-
-# Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
-
-# Pass command line options to tmux. Useful for specifying a different tmux.conf.
-# tmux_options: -f ~/.tmux.mac.conf
-
-# Change the command to call tmux. This can be used by derivatives/wrappers like byobu.
-# tmux_command: byobu
-
-# Specifies (by name or index) which window will be selected on project startup. If not set, the first window is used.
-# startup_window: editor
-
-# Specifies (by index) which pane of the specified window will be selected on project startup. If not set, the first pane is used.
-# startup_pane: 1
-
-# Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
-
 windows:
   - taskmanagement:
       layout: tiled
@@ -51,19 +10,20 @@ windows:
       # 'before' represents legacy functionality and will be deprecated in a future release, in favour of 'after'
       # synchronize: after
       panes:
-        - source ~/.virtualenvs/neovim/bin/activate; nvim "$HOME/Notes/personal/Task Management.md"
-        - taskwarrior-tui
+        - nvim "$HOME/Notes/personal/Task Management.md"
+        - taskwarrior-tui --report az
         - plugin:
-          - source ~/.virtualenvs/neovim/bin/activate; cd ~/.config/nvim/lua/plugins/
+          - cd ~/.config/nvim/lua/plugins/
           - 
           - C-l
-        - home:
-          - source ~/.virtualenvs/neovim/bin/activate; 
-          - 
-          - C-l
+  - system:
+      layout: tiled
+      panes:
+        - ssh seml
+        -
   - config:
       layout: tiled
       panes: 
-      - tmuxinator open home
-      - 
+        - tmuxinator open home
+        - 
 
