--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,7 +149,11 @@ set -g status-interval 60
 
 # Enable activity alerts  
 set -w -g monitor-activity on 
-set -w -g visual-activity on
+set -w -g visual-activity off
+
+# for image.nvim
+set -gq allow-passthrough on
+
 
 if-shell 'test -n "$SSH_CLIENT"' {
   set -g @catppuccin_flavor 'latte'
