--- a/.tmux.conf
+++ b/.tmux.conf
@@ -138,6 +138,11 @@ set -g status-position top
 set -g status-justify centre
 
 set -w -g pane-border-lines heavy
+# This is related to the `tmux_show_only_in_active_window = true,` config in
+# image.nvim
+set -gq allow-passthrough on
+set -g visual-activity off
+
 set -g @plugin 'tmux-plugins/tpm'
 
 run '~/.tmux/plugins/tpm/tpm'
