added some git tools

--- a/.config/homebrew/Brewfile
+++ b/.config/homebrew/Brewfile
@@ -12,13 +12,15 @@ brew "node"
 brew "bitwarden-cli", link: false
 brew "borgmatic"
 brew "cocoapods"
-brew "docker", link: false
+brew "docker"
 brew "fzf"
+brew "git-delta"
 brew "gstreamer"
 brew "htop"
 brew "icu4c@75"
 brew "ifstat"
 brew "jq"
+brew "lazygit"
 brew "mas"
 brew "neovim"
 brew "openjdk"
