many changes will be better now that i have lazygit

--- a/.config/tmuxinator/home.yml
+++ b/.config/tmuxinator/home.yml
@@ -39,7 +39,7 @@ windows:
   - tmux-config:
       layout: tiled
       panes:
-        - nvim ~/.tmux.conf
+        - nvim ~/.config/tmux/tmux.conf
         - nvim ~/Notes/personal/software/tmux.md
         - cd ~/.config/tmux/
   - skhd/yabai/sketchybar-config:
