some code updates. Most importantly app image install script

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -144,4 +144,5 @@
     "dev.containers.dockerPath": "podman",
     "window.newWindowProfile": "Default",
     "cSpell.autoFormatConfigFile": true,
+    "window.zoomLevel": 2,
 }
