--- a/.config/borgmatic/local.yaml
+++ b/.config/borgmatic/local.yaml
@@ -4,20 +4,19 @@ encryption_passcommand: pass borgmatic/encryption_passphrase
 # this was needed when I renamed the path
 relocated_repo_access_is_ok: true
 source_directories:
-    - /home/vitalydruker/Documents
-    - /home/vitalydruker/repos/
-    - /home/vitalydruker/Desktop/
-    - /home/vitalydruker/.ssh
-    - /home/vitalydruker/.config/
-
-    # - /etc
+  - /home/vitalydruker/Documents
+  - /home/vitalydruker/repos/
+  - /home/vitalydruker/Desktop/
+  - /home/vitalydruker/.ssh
+  - /home/vitalydruker/.config/
 
 repositories:
     # The local path or Borg URL of the repository.
-    - path: ssh://borgdrukernasnyc/volume1/borgbackup/thebeef
-      label: remote
+    - path: /mnt/internal_backup/borg/thebeef
+      label: local
 exclude_if_present:
     - .nobackup
+keep_hourly: 24
 keep_daily: 7
 # Number of weekly archives to keep.
 keep_weekly: 4
@@ -27,7 +26,7 @@ keep_monthly: 12
 keep_yearly: 5
 
 
-healthchecks: 
-  ping_url: https://hc-ping.com/50c8a473-fd27-467e-8bff-cf7a0dc569e0
+#healthchecks: 
+#  ping_url: https://hc-ping.com/50c8a473-fd27-467e-8bff-cf7a0dc569e0
 
 
